--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ a, a:visited { color : #0080ff; }
         <p><strong>An Occluded Stacked Hourglass Approach to Facial Landmark Localization and Occlusion Estimation</strong><br>
       <strong>K. Yuen</strong> and M. M. Trivedi<br>
       <em>IEEE Transactions on Intelligent Vehicles (<strong>IV</strong>)</em>, 2017<br>
-      [<a href="https://arxiv.org/pdf/1802.02137.pdf">pdf</a>]
+      [<a href="https://arxiv.org/pdf/1802.02137.pdf">pdf</a> | <a href="http://cvrr.ucsd.edu/kcyuen/occluded_stacked_hourglass/">video</a>]
     </div>
     <br>
     <hr style="height:1px;border:none;color:#e2e2e2;background-color:#e2e2e2;margin-top: -12px;margin-left: 50px;top: 50%;width: 100%;content: "";display: inline-block;"/>
