--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ a, a:visited { color : #0080ff; }
         <p><strong>Looking at Hands in Autonomous Vehicles: A ConvNet Approach using Part Affinity Fields</strong><br>
       <strong>K. Yuen</strong> and M. M. Trivedi<br>
       <em>IEEE Transactions on Intelligent Vehicles (<strong>IV</strong>)</em>, 2018 (Under Review)<br>
-      [<a href="https://arxiv.org/pdf/1804.01176.pdf">pdf</a>]
+      [<a href="https://arxiv.org/pdf/1804.01176.pdf">pdf</a> | <a href="https://youtu.be/eSoRnUi4VZM">video</a>]
     </div>
     <hr style="height:1px;border:none;color:#e2e2e2;background-color:#e2e2e2;margin-top: -12px;margin-left: 50px;top: 50%;width: 100%;content: "";display: inline-block;"/>
 
