--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ a, a:visited { color : #0080ff; }
 
     <div class="publication">
       <img src="paper-figures/dynamics-of-drivers-gaze/1.jpg" class="publogo" width="150" height="110">
-        <p><strong>Dynamics of Driver's Gaze: Explorations in Behavior Modeling\& Maneuver Prediction</strong><br>
+        <p><strong>Dynamics of Driver's Gaze: Explorations in Behavior Modeling & Maneuver Prediction</strong><br>
       S. Martin, S. Vora, <strong>K. Yuen</strong>, and M. M. Trivedi<br>
       <em>IEEE Transactions on Intelligent Vehicles (<strong>IV</strong>)</em>, 2018<br>
       [<a href="https://arxiv.org/pdf/1802.00066.pdf">pdf</a>]
